[package]
name = "hacoenv"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3.21", features = ["wrap_help"]}
tokio = {version = "0.3.6", features = ["rt", "rt-multi-thread", "fs", "signal", "process"]}
num_cpus = "1.13.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
serde = "1.0.118"
serde_yaml = "0.8.14"
anyhow = "1.0.36"
which = "4.0.2"
